Fix distorted images in products list

--- a/less/plugins/ecommerce/products-listing.less
+++ b/less/plugins/ecommerce/products-listing.less
@@ -433,6 +433,9 @@
 
         .image {
             max-width: none;
+             -webkit-flex: 0 0 auto;
+            -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
         }
     }
 
